# moveit_gpd_pr2_pick

./: README.md
moveit_gpd_pr2_pick/: CMakeLists.txt  package.xml
moveit_gpd_pr2_pick/include/moveit_gpd_pr2_pick/: pick_place_action.h
moveit_gpd_pr2_pick/launch/: gpd_pick_object_service.launch  pick_object_loop_demo.launch  shadow_grasp_service.launch  shadow_loop_demo.launch
moveit_gpd_pr2_pick/src/: grasp.cpp  gripper_grasp_action.cpp  pick_object_demo.cpp  pick_object_with_gripper.cpp  pick_object_with_shadow.cpp  pick_place_action.cpp  plan_gripper_grasp_service.cpp  service.cpp  shadow_grasp_service.cpp  test_action_grasp.cpp
